[project]
name = "bbox_objected"
version = "0.2.8"
description = "Manipulate bounding boxes as objects"
authors = [
    { name = "SEBROVATER", email = "sebrovskiy.k@gmail.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
home = "https://github.com/SEBROVATER/bbox_objected"

[tool.uv]
package = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [ "tests" ]

[tool.pdm.build]
package-dir = "src"

[dependency-groups]
dev = [
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.1.0",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
